jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  tls:
  - hosts:
    - jenkins.kanzhou.com
    secretName: jenkins-secret
  rules:
  - host: jenkins.kanzhou.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
